upload/target/MPParser.py
# Generated from main/mp/parser/MP.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class MPParser ( Parser ):

    grammarFileName = "MP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'['", "']'", "':'", "'('", 
                     "')'", "'{'", "'}'", "';'", "','", "'..'", "<INVALID>", 
                     "<INVALID>", "'<>'", "'<'", "'<='", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'>'", "'>='", "'='", "'+'", "'-'", "'*'", 
                     "'/'", "':='" ]

    symbolicNames = [ "<INVALID>", "INTEGER", "REAL", "BOOLEAN", "STRING", 
                      "ARRAY", "LSP", "RSP", "CL", "LP", "RP", "LB", "RB", 
                      "SM", "CM", "DOUBLEDOT", "NOT", "OR", "NE", "LT", 
                      "LTE", "INTEGERDIV", "MOD", "AND", "GT", "GTE", "EQ", 
                      "ADD", "SUB", "MUL", "DIV", "EQOP", "INTLIT", "REALLIT", 
                      "BOOLLIT", "STRINGLIT", "COMMENT1", "COMMENT2", "COMMENT3", 
                      "RETURN_", "BREAK", "CONTINUE", "FOR", "TO", "DOWNTO", 
                      "DO", "IF", "THEN", "ELSE", "WHILE", "BEGIN", "END", 
                      "FUNCTION", "PROCEDURE", "VAR", "OF", "WITH", "ID", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_body = 1
    RULE_expr = 2
    RULE_expr1 = 3
    RULE_expr2 = 4
    RULE_expr3 = 5
    RULE_expr4 = 6
    RULE_expr5 = 7
    RULE_factor = 8
    RULE_factor1 = 9
    RULE_indexexpr = 10
    RULE_invocationexpr = 11
    RULE_listexpr = 12
    RULE_assignmentstatement = 13
    RULE_assignmentfactor = 14
    RULE_ifstatement = 15
    RULE_whilestatement = 16
    RULE_forstatement = 17
    RULE_breakstatement = 18
    RULE_continuestatement = 19
    RULE_returnstatement = 20
    RULE_compoundstatement = 21
    RULE_withstatement = 22
    RULE_callstatement = 23
    RULE_statement = 24
    RULE_vardecl = 25
    RULE_mtype = 26
    RULE_range_ = 27
    RULE_limitingint = 28
    RULE_arraydec = 29
    RULE_listofvardec = 30
    RULE_listid = 31
    RULE_funcdecl = 32
    RULE_pardec = 33
    RULE_procdecl = 34
    RULE_literal = 35
    RULE_keyword = 36

    ruleNames =  [ "program", "body", "expr", "expr1", "expr2", "expr3", 
                   "expr4", "expr5", "factor", "factor1", "indexexpr", "invocationexpr", 
                   "listexpr", "assignmentstatement", "assignmentfactor", 
                   "ifstatement", "whilestatement", "forstatement", "breakstatement", 
                   "continuestatement", "returnstatement", "compoundstatement", 
                   "withstatement", "callstatement", "statement", "vardecl", 
                   "mtype", "range_", "limitingint", "arraydec", "listofvardec", 
                   "listid", "funcdecl", "pardec", "procdecl", "literal", 
                   "keyword" ]

    EOF = Token.EOF
    INTEGER=1
    REAL=2
    BOOLEAN=3
    STRING=4
    ARRAY=5
    LSP=6
    RSP=7
    CL=8
    LP=9
    RP=10
    LB=11
    RB=12
    SM=13
    CM=14
    DOUBLEDOT=15
    NOT=16
    OR=17
    NE=18
    LT=19
    LTE=20
    INTEGERDIV=21
    MOD=22
    AND=23
    GT=24
    GTE=25
    EQ=26
    ADD=27
    SUB=28
    MUL=29
    DIV=30
    EQOP=31
    INTLIT=32
    REALLIT=33
    BOOLLIT=34
    STRINGLIT=35
    COMMENT1=36
    COMMENT2=37
    COMMENT3=38
    RETURN_=39
    BREAK=40
    CONTINUE=41
    FOR=42
    TO=43
    DOWNTO=44
    DO=45
    IF=46
    THEN=47
    ELSE=48
    WHILE=49
    BEGIN=50
    END=51
    FUNCTION=52
    PROCEDURE=53
    VAR=54
    OF=55
    WITH=56
    ID=57
    WS=58
    UNCLOSE_STRING=59
    ILLEGAL_ESCAPE=60
    ERROR_CHAR=61

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MPParser.EOF, 0)

        def body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.BodyContext)
            else:
                return self.getTypedRuleContext(MPParser.BodyContext,i)


        def getRuleIndex(self):
            return MPParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MPParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 74
                self.body()
                self.state = 77 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.FUNCTION) | (1 << MPParser.PROCEDURE) | (1 << MPParser.VAR))) != 0)):
                    break

            self.state = 79
            self.match(MPParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(MPParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MPParser.FuncdeclContext,0)


        def procdecl(self):
            return self.getTypedRuleContext(MPParser.ProcdeclContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = MPParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_body)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.vardecl()
                pass
            elif token in [MPParser.FUNCTION]:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.funcdecl()
                pass
            elif token in [MPParser.PROCEDURE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.procdecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr1(self):
            return self.getTypedRuleContext(MPParser.Expr1Context,0)


        def expr(self):
            return self.getTypedRuleContext(MPParser.ExprContext,0)


        def AND(self):
            return self.getToken(MPParser.AND, 0)

        def THEN(self):
            return self.getToken(MPParser.THEN, 0)

        def OR(self):
            return self.getToken(MPParser.OR, 0)

        def ELSE(self):
            return self.getToken(MPParser.ELSE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.expr1()
            self._ctx.stop = self._input.LT(-1)
            self.state = 99
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.ExprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                    self.state = 89
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 94
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [MPParser.AND]:
                        self.state = 90
                        self.match(MPParser.AND)
                        self.state = 91
                        self.match(MPParser.THEN)
                        pass
                    elif token in [MPParser.OR]:
                        self.state = 92
                        self.match(MPParser.OR)
                        self.state = 93
                        self.match(MPParser.ELSE)
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 96
                    self.expr1() 
                self.state = 101
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Expr1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MPParser.Expr2Context)
            else:
                return self.getTypedRuleContext(MPParser.Expr2Context,i)


        def EQ(self):
            return self.getToken(MPParser.EQ, 0)

        def NE(self):
            return self.getToken(MPParser.NE, 0)

        def LT(self):
            return self.getToken(MPParser.LT, 0)

        def LTE(self):
            return self.getToken(MPParser.LTE, 0)

        def GT(self):
            return self.getToken(MPParser.GT, 0)

        def GTE(self):
            return self.getToken(MPParser.GTE, 0)

        def getRuleIndex(self):
            return MPParser.RULE_expr1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr1" ):
                return visitor.visitExpr1(self)
            else:
                return visitor.visitChildren(self)




    def expr1(self):

        localctx = MPParser.Expr1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr1)
        self._la = 0 # Token type
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.expr2(0)
                self.state = 103
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.NE) | (1 << MPParser.LT) | (1 << MPParser.LTE) | (1 << MPParser.GT) | (1 << MPParser.GTE) | (1 << MPParser.EQ))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 104
                self.expr2(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.expr2(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expr2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr3(self):
            return self.getTypedRuleContext(MPParser.Expr3Context,0)


        def expr2(self):
            return self.getTypedRuleContext(MPParser.Expr2Context,0)


        def SUB(self):
            return self.getToken(MPParser.SUB, 0)

        def ADD(self):
            return self.getToken(MPParser.ADD, 0)

        def OR(self):
            return self.getToken(MPParser.OR, 0)

        def getRuleIndex(self):
            return MPParser.RULE_expr2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr2" ):
                return visitor.visitExpr2(self)
            else:
                return visitor.visitChildren(self)



    def expr2(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Expr2Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr2, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.expr3(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 117
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.Expr2Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr2)
                    self.state = 112
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 113
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.OR) | (1 << MPParser.ADD) | (1 << MPParser.SUB))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 114
                    self.expr3(0) 
                self.state = 119
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Expr3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr4(self):
            return self.getTypedRuleContext(MPParser.Expr4Context,0)


        def expr3(self):
            return self.getTypedRuleContext(MPParser.Expr3Context,0)


        def DIV(self):
            return self.getToken(MPParser.DIV, 0)

        def MUL(self):
            return self.getToken(MPParser.MUL, 0)

        def INTEGERDIV(self):
            return self.getToken(MPParser.INTEGERDIV, 0)

        def MOD(self):
            return self.getToken(MPParser.MOD, 0)

        def AND(self):
            return self.getToken(MPParser.AND, 0)

        def getRuleIndex(self):
            return MPParser.RULE_expr3

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr3" ):
                return visitor.visitExpr3(self)
            else:
                return visitor.visitChildren(self)



    def expr3(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MPParser.Expr3Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expr3, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.expr4()
            self._ctx.stop = self._input.LT(-1)
            self.state = 128
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = MPParser.Expr3Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr3)
                    self.state = 123
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 124
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MPParser.INTEGERDIV) | (1 << MPParser.MOD) | (1 << MPParser.AND) | (1 << MPParser.MUL) | (1 << MPParser.DIV))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 125
                    self.expr4() 
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class Expr4Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr4(self):
            return self.getTypedRuleContext(MPParser.Expr4Context,0)


        def NOT(self):
            return self.getToken(MPParser.NOT, 0)

        def SUB(self):
            return self.getToken(MPParser.SUB, 0)

        def expr5(self):
            return self.getTypedRuleContext(MPParser.Expr5Context,0)


        def getRuleIndex(self):
            return MPParser.RULE_expr4

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr4" ):
                return visitor.visitExpr4(self)
            else:
                return visitor.visitChildren(self)




    def expr4(self):

        localctx = MPParser.Expr4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr4)
        self._la = 0 # Token type
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MPParser.NOT, MPParser.SUB]:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                _la = self._input.LA(1)
                if not(_la==MPParser.NOT or _la==MPParser.SUB):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 132
                self.expr4()
                pass
            elif token in [MPParser.LP, MPParser.INTLIT, MPParser.REALLIT, MPParser.BOOLLIT, MPParser.STRINGLIT, MPParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 133
                self.expr5()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expr5Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MPParser.LP, 0)

        def expr(self):
            return self.getTypedRuleContext(MPParser.ExprContext,0)


        def RP(self):
            return self.getToken(MPParser.RP, 0)

        def factor(self):
            return self.getTypedRuleContext(MPParser.FactorContext,0)


        def getRuleIndex(self):
            return MPParser.RULE_expr5

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr5" ):
                return visitor.visitExpr5(self)
            else:
                return visitor.visitChildren(self)




    def expr5(self):

        localctx = MPParser.Expr5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expr5)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.match(MPParser.LP)
                self.state = 137
                self.expr(0)
                self.state = 138
                self.match(MPParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.factor()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FactorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def invocationexpr(self):
            return self.getTypedRuleContext(MPParser.InvocationexprContext,0)


        def indexexpr(self):
            return self.getTypedRuleContext(MPParser.IndexexprContext,0)


        def BOOLLIT(self):
            return self.getToken(MPParser.BOOLLIT, 0)

        def STRINGLIT(self):
            return self.getToken(MPParser.STRINGLIT, 0)

        def INTLIT(self):
            return self.getToken(MPParser.INTLIT, 0)

        def REALLIT(self):
            return self.getToken(MPParser.REALLIT, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def getRuleIndex(self):
            return MPParser.RULE_factor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = MPParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_factor)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.invocationexpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 144
                self.indexexpr(0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 145
                self.match(MPParser.BOOLLIT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 146
                self.match(MPParser.STRINGLIT)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 147
                self.match(MPParser.INTLIT)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 148
                self.match(MPParser.REALLIT)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 149
                self.match(MPParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Factor1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MPParser.LP, 0)

        def expr(self):
            return self.getTypedRuleContext(MPParser.ExprContext,0)


        def RP(self):
            return self.getToken(MPParser.RP, 0)

        def invocationexpr(self):
            return self.getTypedRuleContext(MPParser.InvocationexprContext,0)


        def BOOLLIT(self):
            return self.getToken(MPParser.BOOLLIT, 0)

        def STRINGLIT(self):
            return self.getToken(MPParser.STRINGLIT, 0)

        def INTLIT(self):
            return self.getToken(MPParser.INTLIT, 0)

        def REALLIT(self):
            return self.getToken(MPParser.REALLIT, 0)

        def ID(self):
            return self.getToken(MPParser.ID, 0)

        def getRuleIndex(self):
            return MPParser.RULE_factor1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor1" ):
                return visitor.visitFactor1(self)
            else:
                return visitor.visitChildren(self)




    def factor1(self):

        localctx = MPParser.Factor1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_factor1)
        try:
            self.state = 162
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(MPParser.LP)
                self.state = 153
                self.expr(0)
                self.state = 154
                self.match(MPParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.invocationexpr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 157
                self.match(MPParser.BOOLLIT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 158
                self.match(MPParser.STRINGLIT)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 159
                self.match(MPParser.INTLIT)
                pass
